Restore support for typescript >= 3.0; add tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,21 @@
-
 language: node_js
-script: npm run test
 node_js:
   - 10
+env:
+  matrix:
+    - TS_VERSION=3.0
+    - TS_VERSION=3.1
+    - TS_VERSION=3.2
+    - TS_VERSION=3.3
+    - TS_VERSION=3.4
+    - TS_VERSION=3.5
+    - TS_VERSION=3.6
+    - TS_VERSION=3.7
+    - TS_VERSION=3.8
+    - TS_VERSION=3.9
+    - TS_VERSION=4.0
+    - TS_VERSION=4.1
+    - TS_VERSION=4.2
+    - TS_VERSION=4.3
+    - TS_VERSION=latest
+script: npm run tsc && npm install typescript@$TS_VERSION && npm run test
