--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "tsc": "tsc",
     "tsc:watch": "tsc -w",
     "prepublishOnly": "tsc -d",
-    "test": "tsc && mocha --timeout 10000 ./lib/**/__tests__/**.js",
+    "test": "tsc && npm run test:only",
+    "test:all": "./test-ts-versions.sh",
     "test:debug": "tsc && mocha --debug ./lib/**/__tests__/**.js",
+    "test:only": "mocha --timeout 10000 ./lib/**/__tests__/**.js",
     "print": "npm run tsc && node ./lib/print.js",
     "print:sample1": "npm run tsc && node ./lib/print.js ./src/__tests__/data/ColumnHigherOrderComponent.tsx simple",
     "lint": "eslint -c lint.json 'src/**/*.{ts,tsx}'",
@@ -23,15 +25,16 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "typescript": ">= 4.3.x"
+    "typescript": ">= 3.x"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
     "@types/lodash": "^4.14.137",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^15.6.1",
+    "@types/node": "^10.0.0",
     "@types/prop-types": "^15.5.4",
     "@types/react": "^16.9.34",
+    "@types/semver": "^7.3.8",
     "@types/source-map-support": "^0.4.1",
     "chai": "^4.1.2",
     "eslint": "^7.5.0",
@@ -43,11 +46,12 @@
     "prettier": "^1.19.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "semver": "^7.3.5",
     "source-map-support": "^0.5.6",
-    "typescript": "^4.3.2"
+    "typescript": "~3.8.0"
   },
   "files": [
-    "lib",
+    "lib/!(__tests__)",
     "README.md"
   ],
   "repository": {
